# guacamole_api

./: .gitignore  Cargo.toml  README.md
src/: conf.rs  enums.rs  functions.rs  main.rs  structures.rs
src/functions/: assign-conn-to-user-group.rs  assign_conn_to_user_group.rs  conf.rs  create_gua_conn_group.rs  create_gua_connection.rs  create_gua_rdp_connection.rs  create_gua_token.rs  create_gua_vnc_connection.rs  delete_gua_conn_group.rs  delete_gua_connection.rs  delete_gua_token.rs  get_broadcast_map.rs  get_config_params.rs  get_gua_conn_groups.rs  get_gua_connection_details.rs  get_gua_connections.rs  get_gua_rdp_connection_details.rs  get_gua_vnc_connection_details.rs  parse_broadcast_addresses.rs  parse_csv.rs  structures.rs  update_gua_connection.rs  update_gua_rdp_connection.rs  update_gua_vnc_connection.rs
src/structures/: guaconn.rs  guaconngrp.rs  host.rs
