[package]
name = "guacamole_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.179", features = ["derive"]}
csv = "1.3.0"
config = "0.13.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
